@@ -828,7 +828,7 @@ $_lang["template_desc"] = 'Description';
 $_lang["template_edit_tab"] = 'Edit Template';
 $_lang["template_locked_message"] = 'This template is locked.';
 $_lang["template_management_msg"] = 'Here you can choose which template you wish to edit.';
-$_lang["template_msg"] = 'Here you can create/ edit templates. Changed/ new templates won\'t be visible in the cached pages of your site until the cache is emptied, however, you can use the preview function on a page to see the template in action.';
+$_lang["template_msg"] = 'Create and edit templates. Changed or new templates won\'t be visible in your site\'s cached pages until the cache is emptied, however, you can use the preview function on a page to see the template in action.';
 $_lang["template_name"] = 'Template name';
 $_lang["template_no_tv"] = 'No template variables have been assigned to this template yet.';
 $_lang["template_reset_all"] = 'Reset all pages to use Default template';
@@ -843,8 +843,8 @@ $_lang["tmplvars_caption"] = 'Caption';
 $_lang["tmplvars_default"] = 'Default Value';
 $_lang["tmplvars_description"] = 'Description';
 $_lang["tmplvars_elements"] = 'Input Option Values';
-$_lang["tmplvars_management_msg"] = 'Here you can manage the additional variable fields for your documents.';
-$_lang["tmplvars_msg"] = 'Here you can add/edit template variables.  The template variables must be enabled for selected templates in order for them to be accessed from snippets and documents just like other content variables.';
+$_lang["tmplvars_management_msg"] = 'Manage additional custom content fields (Template Variables) for your documents.';
+$_lang["tmplvars_msg"] = 'Add or edit template variables here. Template Variables must be assigned to templates in order to access them from snippets and documents.';
 $_lang["tmplvars_name"] = 'Variable Name';
 $_lang["tmplvars_novars"] = 'No Template Variables found';
 $_lang["tmplvars_rank"] = 'Sort Order';
@@ -853,7 +853,7 @@ $_lang["tmplvars_type"] = 'Input Type';
 $_lang["tmplvars_widget"] = 'Widget';
 $_lang["tmplvars_widget_prop"] = 'Widget Properties';
 $_lang["tmplvar_access_msg"] = 'Select the document groups that are allowed to modify the content or value of this variable';
-$_lang["tmplvar_change_template_msg"] = 'Changing this template will cause the page to reload the Template Variables. All unsaved changes will be lost.\n\n Are you sure you want to change this template?';
+$_lang["tmplvar_change_template_msg"] = 'Changing this template will cause the page to reload the Template Variables, loosing any unsaved changes.\n\n Are you sure you want to change this template?';
 $_lang["tmplvar_inuse"] = 'The following document(s) are currently using this Template Variable. To continue with the delete operation click the Delete button otherwise click the Cancel button.';
 $_lang["tmplvar_tmpl_access"] = 'Template Access';
 $_lang["tmplvar_tmpl_access_msg"] = 'Select the templates that are allowed to access/process this variable';
@@ -862,8 +862,8 @@ $_lang["tools"] = 'Tools';
 $_lang["top_howmany_message"] = 'When viewing reports, how large should the \'Top ...\' lists be?';
 $_lang["top_howmany_title"] = 'Top how many';
 $_lang["total"] = 'total';
-$_lang["track_visitors_message"] = 'Logging visits will allow you to view usage statistics for your site, however, logging visits slows down the site parser a little. If you\'re not bothered about visitor statistics, you can safely turn this off and enjoy a small speed boost.';
-$_lang["track_visitors_title"] = 'Log visits';
+$_lang["track_visitors_message"] = 'This setting has no effect unless you have a visitor tracking or statistics resource installed that supports this setting. Logging visits will allow you to view your site\'s website usage statistics.';
+$_lang["track_visitors_title"] = 'Log visits (stats)';
 $_lang["truncate_table"] = 'Click here to truncate this table';
 $_lang["tuesday"] = 'Tuesday';
 $_lang["tv"] = 'TV';
