@@ -1044,3 +1044,8 @@ ul#nav {
 	-moz-opacity: 0.5;
 	filter: progid:DXImageTransform.Microsoft.Alpha(opacity=50);
 }
+/* Code textarea overrides :
+---------------------------------------------------------- */
+#ta, .tmplvars textarea {
+    font-family: monospace !important;
+}
